# ChangeLog for net-misc/tcpsound
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/tcpsound/ChangeLog,v 1.8 2010/04/09 05:10:48 jer Exp $

  09 Apr 2010; Jeroen Roovers <jer@gentoo.org>
  files/tcpsound-0.3.1-makefile.patch:
  Fix man path.

  09 Apr 2010; Jeroen Roovers <jer@gentoo.org> tcpsound-0.3.1.ebuild,
  -files/tcpsound-0.3.1-asneeded.patch,
  +files/tcpsound-0.3.1-makefile.patch:
  Clean up ebuild. Replace "mktool" with CC and install, respectively. Respect
  LDFLAGS and LDFLAGS Make (failing) Makefile commands explicit.  Finish
  building or die (bug #313661). Use emake instead of einstall.

  29 Mar 2010; Samuli Suominen <ssuominen@gentoo.org> tcpsound-0.3.1.ebuild,
  +files/tcpsound-0.3.1-asneeded.patch:
  Fix building with -Wl,--as-needed wrt #248143 by Kacper Kowalik.

  29 Oct 2007; Markus Ullmann <jokey@gentoo.org> tcpsound-0.3.1.ebuild:
  Fix quoting

  29 Oct 2007; Markus Ullmann <jokey@gentoo.org> metadata.xml:
  Developed to end, reassigning to herd

  15 Apr 2007; Andrej Kacian <ticho@gentoo.org> tcpsound-0.3.1.ebuild:
  Stable on x86, bug #174628.

*tcpsound-0.3.1 (08 Oct 2006)

  08 Oct 2006; Markus Ullmann <jokey@gentoo.org> +metadata.xml,
  +tcpsound-0.3.1.ebuild:
  Initial commit, thanks to Daniel Willmann in bug #63554 for providing an ebuild
