@@ -1,5 +1,6 @@
-AUX tcpsound-0.3.1-makefile.patch 1657 RMD160 c2088f0dc503faf4841e44ea025a8c414082e13f SHA1 74e3a09a5b552a7b3148d0303a215ed32f56bf70 SHA256 98d8028d3e1c6d73c1c1cd90089593322c3fb98a9b099ac9debeb98cc9e64669
-DIST tcpsound-0.3.1.tar.gz 155357 RMD160 a0c2ce472d79835a412a1b7afc5b43c6282d1185 SHA1 195e9be515912d5d1358a447f07932cf4446a5c5 SHA256 358869ee017f9ccb62f8425bbc1ec70b65316b981dbf7a7b6b22042ae32b57c6
-EBUILD tcpsound-0.3.1.ebuild 999 RMD160 4c83ad694e4310d379058a94248e9fc86acb4d08 SHA1 5b654e18409d7ceeeda115dd662efa6fbdf01bf3 SHA256 433f5be2ac09407e7b3ef0b7d235e2fa2e334252326fd9736a1b7f04d688a199
-MISC ChangeLog 1356 RMD160 9c7d0af7f8505c5097bbad9915b1073e03c5ad47 SHA1 6433ee138eb47bdb3430ad899cd9a04490227442 SHA256 8b3f084067b1517584e919774cfe0386ce7442dd9239927db6d7670fa6fb9e11
-MISC metadata.xml 160 RMD160 2738573ec519cbef4b293bc132f7dd9d02291137 SHA1 29b8b234e0f3a475b50bd4df1ef8b4e5749823ce SHA256 39e232fc7ec88ca0b077cb3950cb39d15cd990842b88d5bfe14f02f34d72f37b
+AUX tcpsound-0.3.1-makefile.patch 1657 SHA256 98d8028d3e1c6d73c1c1cd90089593322c3fb98a9b099ac9debeb98cc9e64669 SHA512 c0268fc7d1363115cf5cc231f6554b100cc0f7f764fb84673011cf6bd6107968e5cd7f9b2032f49d044391f9be021de8957b3ce0f7d7396e8f1c93d9ff5bb010 WHIRLPOOL 7f1f63af2ac7b4ecdded42adc9f9bb2e62d09e761ae9080efcf8a0c7ef6e7933981a9884e41b54f4d260c9d4628c0b4ce919b8f5a793a93aef56ac13c2dcbe0a
+DIST tcpsound-0.3.1.tar.gz 155357 SHA256 358869ee017f9ccb62f8425bbc1ec70b65316b981dbf7a7b6b22042ae32b57c6 SHA512 9db7c03f57f0e95b5b6b947bdeff9664dda6f6039e1080611205ca15648cb9b31325f462b31cbb1462a4aa767a9c89d6125c17144bb0dd7d0acf89e24b2f3055 WHIRLPOOL e8bc4575bfaeeab075967cc797f50eb2e6a09c37d22e22a9ad5c11a3188db56f185d4c94268d5cee042155ea0205a8d86efd41642c7e65cb62e9543719b070da
+EBUILD tcpsound-0.3.1-r1.ebuild 878 SHA256 3eccab028535296ec9531bf4179ccf0b8d46d81643ab8395822e3bda18064d95 SHA512 66004b6ad906872461e67d0a440a31144f95fce3f042e10826fe0b53ea5751b23694806ca91ebf1add7b75993472d17b0bf7f3db0d484904fd8f657263f646ff WHIRLPOOL eb8e62c5bd80748280a4f199cacda8303634392bef4bca44ab4a8253a3adde7dd4f07fb3b7ea6755e0ca6563301903c228da170d118c7364b0055be4dc605862
+EBUILD tcpsound-0.3.1.ebuild 999 SHA256 433f5be2ac09407e7b3ef0b7d235e2fa2e334252326fd9736a1b7f04d688a199 SHA512 d20e1679cd68e6c36013538491168dc68ec1ee2d9721612d7f6ac8336cf489046d02452e4c1d6af3324fb87165da25c488f0607528f3a8cc690e0c78c8f79bd0 WHIRLPOOL 9eb10d67dc48a6af53740c5414350bb8823cf6747861e3b57529fbdf6c2b25d744759b181bad6f94bf866ebbdf0977b5b4285661f09a69af522a732642821ab3
+MISC ChangeLog 1529 SHA256 25f22cb30222f23b14e3e081e84aac8fffa50cdf84b8cb7138719dd0163cd61b SHA512 e1ff1b436265dc17d0d69096338318e51f22f726d1b760ed2e2bd79fd613d296ce48e735df727e7724c7b8807a291a74766c985c82854aaada8113bf2dd24cb0 WHIRLPOOL 5ac1ee5465e965d4ecfd5c28a21c12bebe4f9f4a0373cde4da54f28939a5b1ffaf52df583418e317ba4cc67318df431e62b264a3a77ac0c6a55367eb123d3a84
+MISC metadata.xml 160 SHA256 39e232fc7ec88ca0b077cb3950cb39d15cd990842b88d5bfe14f02f34d72f37b SHA512 3ac3a74a7cdf45b14884d967b10e4752f9cb06c579f6d7baf921f9be5450cbe7536c2e5a480ac3c95156eb6abb32e68f74cecc86b9ac0dcc4e0e1b4b255c3e20 WHIRLPOOL f7504ce9e3e8a58d19bba5448305f806c2ae01d0a8d2cf09d6bc6a089a6e1c28a1b12a80bb6020584b5ed21df94e4936b1695a54548704cb8679660b6b807955
