@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/tcpsound
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/tcpsound/ChangeLog,v 1.8 2010/04/09 05:10:48 jer Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/tcpsound/ChangeLog,v 1.9 2012/10/18 12:21:33 pinkbyte Exp $
+
+*tcpsound-0.3.1-r1 (18 Oct 2012)
+
+  18 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> +tcpsound-0.3.1-r1.ebuild:
+  Revision bump: EAPI 4, base eclass, drop unneeded sed
 
   09 Apr 2010; Jeroen Roovers <jer@gentoo.org>
   files/tcpsound-0.3.1-makefile.patch:
